--- a/index.html
+++ b/index.html
@@ -34,25 +34,23 @@
 
 <body>
   <!-- Fixed navbar -->
-  <nav class="navbar navbar-expand-lg fixed-top">
-    <div class="container">
-      <div class="navbar-nav">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-          aria-expanded="false" aria-controls="navbar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
+  <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Michael J's Awesome Page</a>
+
+        <button type="button" class="navbar-toggler collapse" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-expanded="false" aria-controls="navbarSupportedContent" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">Michael J's Awesome Page</a>
-      </div>
-      <div id="navbar" class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+        
+
+      <div id="navbarSupportedContent" class="navbar-collapse collapse">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" aria-current="page" href="#">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+          <li class="nav-item dropdown">
+            <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" role="button" aria-haspopup="true"
               aria-expanded="false">Past Projects <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a rel="noreferrer" target="_blank" href="tv-finder.html">TV Show Finder</a></li>
@@ -83,7 +81,7 @@
     <div class="w-responsive text-center mx-auto p-3 mt-2">
       <div class="jumbotron">
         <h1>Latest Project:</h1>
-        <h2>News Feed with <a rel="noreferrer" target="_blank" href="https:docsnewscatcherapi.com">&#60/newscatcher&#62</a> API</h2>
+        <h2>News Feed with <a rel="noreferrer" target="_blank" href="https:docs.newscatcherapi.com">&#60/newscatcher&#62</a> API</h2>
         <p>
           Small project incorporating a news database. Click <i>Search</i> for the latest headlines.
         </p>
@@ -92,7 +90,7 @@
             <form class="row clearfix g-0" id="user-form">
               <div class="col-lg-5">
                   <!-- <input type="text" name='search'> -->
-                <input class="form-control mx-0" type="text" name="Search" placeholder="Nasdaq" aria-label="default input example">
+                <input class="form-control mx-0" type="text" name="Search" placeholder="e.g. 'Bitcoin'" aria-label="default input example">
               </div>
               <div class="col-lg ">
                 <input class="btn btn-primary btn-sm float-left ml-0" type="submit" role="button" value="Search">
