Removed testing content

--- a/index.html
+++ b/index.html
@@ -88,11 +88,12 @@
         <div class="container">
 
             <form class="row clearfix g-0" id="user-form">
+              <div class="col-lg-2"></div>
               <div class="col-lg-5">
                   <!-- <input type="text" name='search'> -->
                 <input class="form-control mx-0" type="text" name="Search" placeholder="e.g. 'Bitcoin'" aria-label="default input example">
               </div>
-              <div class="col-lg ">
+              <div class="col-lg">
                 <input class="btn btn-primary btn-sm float-left ml-0" type="submit" role="button" value="Search">
                 <p id="demo"></p>
               </div>
@@ -104,6 +105,7 @@
         
         <div class="jumbotron">
           <div id="results" class="container">
+            <!--EXAMPLE RESULTS CARDS 
             <div class="row">
               <div class="w-responsive text-left mx-auto pb-2 px-4 mx-auto">
                 <div class="card bg-white rounded">
@@ -148,6 +150,7 @@
                 </div>
               </div>
             </div>
+            -->
           </div>
           <div class="container">
 
