--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="w-responsive text-center mx-auto p-3 mt-2">
       <div class="jumbotron">
         <h1>Latest Project:</h1>
-        <h2>News Feed with <a rel="noreferrer" target="_blank" href="https:docs.newscatcherapi.com">&#60/newscatcher&#62</a> API</h2>
+        <h2>News Feed with <a rel="noreferrer" target="_blank" href="https://docs.newscatcherapi.com">&#60/newscatcher&#62</a> API</h2>
         <p>
           Small project incorporating a news database. Click <i>Search</i> for the latest headlines.
         </p>
