--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    
   <!-- Optional theme 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css"
     integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous" />
@@ -33,6 +34,7 @@
 </head>
 
 <body>
+  <div class="bg obj-fit-cover" style="background-image: url('images/background.avif'); height: 100vh;">
   <!-- Fixed navbar -->
   <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
     <div class="container-fluid">
@@ -171,7 +173,7 @@
 
   </div>
 
-
+</div>
   <!-- /container -->
 
   <!-- Bootstrap core JavaScript
