testing bootstrap features in 'test.html' page.

--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Hackathon Project</title>
+  <title>MJ's Awesome Page</title>
 
-    <script
+    <script async
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
 
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     
   <!-- Optional theme 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css"
@@ -64,9 +63,9 @@
         </ul>
         <p>
         <div class="row">
-          <div><a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/michael-jefferson-3b369228/"
+          <div class="d-inline"><a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/michael-jefferson-3b369228/"
               title="LinkedIn" class="btn btn-linkedin btn-sm"><i class="fa fa-linkedin fa-fw"></i> LinkedIn</a></div>
-          <div><iframe src="https://ghbtns.com/github-btn.html?user=heymj317&type=follow&count=true" frameborder="0"
+          <div class="d-inline"><iframe src="https://ghbtns.com/github-btn.html?user=heymj317&type=follow&count=true" frameborder="0"
               scrolling="0" width="170" height="20" title="GitHub"></iframe></div>
         </div>
         </p>
@@ -79,9 +78,9 @@
     <!-- Main component for a primary marketing message or call to action -->
     <div class="w-responsive text-center mx-auto p-3 mt-2">
       <div class="jumbotron">
-        <h1>Latest Project:</h1>
-        <h2>News Feed with <a rel="noreferrer" target="_blank" href="https://docs.newscatcherapi.com">&#60/newscatcher&#62</a> API</h2>
-        <p>
+        <h1 class="display-4">Latest Project:</h1>
+        <h3>News Feed with <a rel="noreferrer" target="_blank" href="https://docs.newscatcherapi.com">&#60/newscatcher&#62</a> API</h3>
+        <p class="lead">
           Small project incorporating a news database. Click <i>Search</i> for the latest headlines.
         </p>
         <div class="container">
@@ -142,8 +141,10 @@
                       <h6 class="card-title">News Headline New </h6>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                         the card's content.</p>
-                      <cite title="Source Title"> - From Website.com  </cite>
-                      <a href="#" class="btn btn-secondary btn-sm p-2" role="button">Read Full Article</a>
+                        <blockquote class="blockquote">
+                        <footer class="blockquote-footer"><cite title="Source Title"> - From Website.com  </cite>
+                      <a href="#" class="btn btn-secondary btn-sm p-2" role="button">Read Full Article</a></footer>
+                      </blockquote>
                     </div>
                   </div>
                 </div>
@@ -183,7 +184,7 @@
         '<script src="../../assets/js/vendor/jquery.min.js"><\/script>'
       );
   </script>
-
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
