updating db source and related functions

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>MJ's Awesome Page</title>
 
-    <script async
+    <script 
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
@@ -63,7 +63,8 @@
         </ul>
         <p>
         <div class="row">
-          <div class="d-inline"><a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/michael-jefferson-3b369228/"
+          <!--/ add space around the link, and vertically allign the icon -->
+          <div class="d-inline"><a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/--michaeljefferson/"
               title="LinkedIn" class="btn btn-linkedin btn-sm"><i class="fa fa-linkedin fa-fw"></i> LinkedIn</a></div>
           <div class="d-inline"><iframe src="https://ghbtns.com/github-btn.html?user=heymj317&type=follow&count=true" frameborder="0"
               scrolling="0" width="170" height="20" title="GitHub"></iframe></div>
@@ -79,7 +80,7 @@
     <div class="w-responsive text-center mx-auto p-3 mt-2">
       <div class="jumbotron">
         <h1 class="display-4">Latest Project:</h1>
-        <h3>News Feed with <a rel="noreferrer" target="_blank" href="https://docs.newscatcherapi.com">&#60/newscatcher&#62</a> API</h3>
+        <h3>News Feed with <a rel="noreferrer" target="_blank" href="https://newsapi.org/">newsapi.org</a> API</h3>
         <p class="lead">
           Small project incorporating a news database. Click <i>Search</i> for the latest headlines.
         </p>
@@ -91,7 +92,7 @@
                   <!-- <input type="text" name='search'> -->
                 <input class="form-control mx-0" type="text" name="Search" placeholder="e.g. 'Bitcoin'" aria-label="default input example">
               </div>
-              <div class="col-lg">
+              <div class="col">
                 <input class="btn btn-primary btn-sm float-left ml-0" type="submit" role="button" value="Search">
                 <p id="demo"></p>
               </div>
@@ -179,11 +180,7 @@
   <!-- Bootstrap core JavaScript
     ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
-  <script
-  src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-  integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-  crossorigin="anonymous"
-></script>
+
 <script
   src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
   integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
